fixed navbar alignment

--- a/index.css
+++ b/index.css
@@ -6,32 +6,7 @@ body {
 
 .topnav {
   overflow: hidden;
-  background-color: #e9e9e9;
-
-}
-
-.topnav a {
-  float: left;
-  display: block;
-  color: black;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.topnav a.active {
-  background-color: #2196F3;
-  color: white;
-}
-
-.search-container {
-
+  background-color: ##272727;
 }
 
 .topnav input[type=text] {
@@ -51,10 +26,16 @@ body {
   cursor: pointer;
 }
 
+.topnav .search-container {
+  display: inline-block;
+  border: solid green 2px;
+}
+
 .topnav .search-container button:hover {
   background: #ccc;
 }
 
+/*
 @media screen and (max-width: 600px) {
   .topnav .search-container {
     float: none;
@@ -71,42 +52,40 @@ body {
     border: 1px solid #ccc;
   }
 }
+*/
 
-.navbar {
-  background-color: #555;
-  overflow: auto;
-
+.icons {
+  float: right;
+  border: solid red 3px;
 }
 
-.navbar a {
-  float: right;
+.icons a {
   padding: 12px;
   color: white;
   text-decoration: none;
   font-size: 17px;
 }
 
-.navbar a:hover {
+.icons a:hover {
   opacity: 1.0;
   filter: alpha(opacity=100);
 }
 
-.active {
-  background-color: #4CAF50;
-}
-
+/*
 @media screen and (max-width: 500px) {
-  .navbar a {
+  .icons a {
     float: none;
     display: block;
   }
 }
+*/
 
 #logo {
-  margin-right: 300px;
   float: left;
+  margin-right: 300px;
   height: inherit;
   width: 80px;
+  border: solid blue 2px;
 }
 
 #video {
